force-app/main/default/objects/Vyuha_Event__e/Vyuha_Event__e.object-meta.xml
<CustomObject>
    <description>Platform Event to manage signaling between Vyhua executions</description>
    <label>Vyuha Event</label>
    <pluralLabel>Vyuha Events</pluralLabel>
</CustomObject>