force-app/main/default/objects/Vyuha_Event__e/fields/Apex_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Apex_Job_ID__c</fullName>
    <description>Related Apex Job ID for execution</description>
    <label>Apex Job ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>