force-app/main/default/objects/Vyuha_Event__e/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <description>Event related data</description>
    <label>Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>