force-app/main/default/objects/Vyuha_Event__e/fields/Formation_ID__c.field-meta.xml
<CustomField>
    <fullName>Formation_ID__c</fullName>
    <description>Unique ID for Vyuha Formation ID</description>
    <label>Formation ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>