force-app/main/default/objects/Vyuha_Event__e/fields/Schedule_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Item_ID__c</fullName>
    <description>ID for Schedule Item ID if Event was run from the scheduler</description>
    <label>Schedule Item ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>